--- a/app/roles/inventory/templates/inventory.j2
+++ b/app/roles/inventory/templates/inventory.j2
@@ -1,6 +1,12 @@
 all:
-  children:
+  hosts:
+    console:
+      ansible_host: console.{{ inventory_lab_prefix }}.{{ inventory_domain }}
+      ansible_user: ec2-user
+      ansible_ssh_private_key_file: /data/aws_key.pem
+      ansible_become: yes
 
+  children:
     windows:
       hosts:
 {% for idx in range(inventory_win_node_count | int) %}
