Added the extra web links to the lab console.

--- a/app/roles/console/templates/config.yml.j2
+++ b/app/roles/console/templates/config.yml.j2
@@ -1,6 +1,1 @@
-USER_PASS: {{ console_user_pass }}
-ADMIN_PASS: {{ console_admin_pass }}
-USER_COUNT: {{ console_user_count }}
-DOMAIN: {{ console_domain }}
-SECRET_KEY: {{ console_secret_key }}
-OTHER_RESOURCES: []
+{{ console_config | to_nice_yaml }}
