--- a/app/roles/inventory/templates/inventory.j2
+++ b/app/roles/inventory/templates/inventory.j2
@@ -3,7 +3,7 @@ all:
     console:
       ansible_host: console.{{ inventory_lab_prefix }}.{{ inventory_domain }}
       ansible_user: ec2-user
-      ansible_ssh_private_key_file: /data/aws_key.pem
+      ansible_ssh_private_key_file: /data/id_rsa
       ansible_become: yes
 
   children:
